HAWQ-1371. Fix QE process hang in shared input scan